--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="card">
         <h2>Resume</h2>
         <p>You can download my latest resume here:</p>
-        <p>👉 <strong>Add your resume PDF link here after uploading to GitHub</strong></p>
+        <p>👉 <a href="https://github.com/rahulkumar-dev01/rahul-portfolio/blob/main/Rahul_Resume.pdf" download>Download My Resume (PDF)</a></p>
     </div>
 
     <div class="card">
