adding resume link.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,24 @@
     <div class="card">
         <h2>Resume</h2>
         <p>You can download my latest resume here:</p>
-        <p>👉 <a href="https://github.com/rahulkumar-dev01/rahul-portfolio/blob/main/Rahul_Resume.pdf" download>Download My Resume (PDF)</a></p>
+        <p>👉 <a href="https://github.com/rahulkumar-dev01/rahul-portfolio/blob/main/Rahul_Resume.pdf" 
+   target="_blank" 
+   style="
+        display: inline-block;
+        padding: 12px 22px;
+        background-color: #2563eb;
+        color: white;
+        font-size: 16px;
+        border-radius: 6px;
+        text-decoration: none;
+        font-weight: bold;
+        box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+        transition: 0.3s;
+   "
+   onmouseover="this.style.backgroundColor='#1e3a8a'"
+   onmouseout="this.style.backgroundColor='#2563eb'">
+   📄 Download My Resume (PDF)
+</a></p>
     </div>
 
     <div class="card">
