--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="card">
         <h2>Resume</h2>
         <p>You can download my latest resume here:</p>
-        <p>👉 <a href="https://github.com/rahulkumar-dev01/rahul-portfolio/blob/main/Rahul_Resume.pdf" 
+        <p>👉<a href="https://raw.githubusercontent.com/rahulkumar-dev01/rahul-portfolio/main/Rahul_Resume.pdf" 
    target="_blank" 
    style="
         display: inline-block;
@@ -94,7 +94,8 @@
    onmouseover="this.style.backgroundColor='#1e3a8a'"
    onmouseout="this.style.backgroundColor='#2563eb'">
    📄 Download My Resume (PDF)
-</a></p>
+</a>
+</p>
     </div>
 
     <div class="card">
